# oprofile

./: .cvsignore  .gitignore  ChangeLog  ChangeLog-2001  ChangeLog-2005  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  HACKING  Makefile  Makefile.am  Makefile.in  README  README_PACKAGERS  Rules.make.in  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  make.common.in  make.deps  op_events.c  op_init.c  op_ioctl.h  op_syscalls.c  op_user.h  op_x86.c  oprofile.c  oprofile.h  oprofile.s  oprofile_k.c  oprofile_nmi.S  pch-c++.h  version-1.h.in  version.h.in  version_tpl.h.in
dae/: .cvsignore  .gdb_history  Makefile  Makefile.am  Makefile.in  cp_events.c  cpshow.c  div.c  loop.c  md5.c  md5.h  min.c  op_dump  op_session.c  op_start  op_stop  opd_image.c  opd_image.h  opd_kernel.c  opd_kernel.h  opd_list.h  opd_mapping.c  opd_mapping.h  opd_parse_proc.c  opd_parse_proc.h  opd_printf.h  opd_proc.c  opd_proc.h  opd_sample_files.c  opd_sample_files.h  opd_stats.c  opd_stats.h  opd_util.c  opd_util.h  oprofctl.c  oprofctl.h  oprofiled.c  oprofiled.h  p_module.h  rdtsc.c  (+1 more)
daemon/: .cvsignore  Makefile.am  Makefile.in  init.c  opd_anon.c  opd_cookie.c  opd_cookie.h  opd_events.c  opd_events.h  opd_extended.c  opd_ibs.c  opd_ibs_trans.c  opd_image.c  opd_image.h  opd_interface.h  opd_kernel.c  opd_kernel.h  opd_mangling.c  opd_mangling.h  opd_perfmon.c  opd_perfmon.h  opd_pipe.c  opd_printf.h  opd_sample_files.c  opd_sample_files.h  opd_sfile.c  opd_sfile.h  opd_stats.c  opd_stats.h  opd_trans.c  opd_trans.h  opd_util.c  opd_util.h  oprofiled.c  oprofiled.h  p_module.h
doc/: .cvsignore  .gitignore  CodingStyle  Makefile.am  Makefile.in  guide.html  guide.lyx  internals.xml  ocount.1.in  op-check-perfevents.1.in  op_help.1  op_help.1.in  opannotate.1.in  oparchive.1.in  opcontrol.1.in  operf.1.in  opgprof.1.in  ophelp.1.in  ophelp.xsd  opimport.1.in  opjitconv.1.in  opreport.1.in  opreport.xsd  oprof_start.1.in  oprofile.1.in  oprofile.sgml  oprofile.xml  opstack.1.in
events/: .cvsignore  Makefile.am  Makefile.in  alpha.ev6.events  i386.athlon.events  i386.p4-ht.events  i386.p4-ht.unit_masks  i386.p4.events  i386.p4.unit_masks  i386.piii.unit_masks  ia64.itanium2.events  ia64.itanium2.unit_masks  op_events.c  op_events_desc.c  op_help.c  rtc..events  x86-64.hammer.events  x86-64.hammer.unit_masks
gui/: .cvsignore  Makefile.am  Makefile.in  oprof_start.cpp  oprof_start.h  oprof_start_config.cpp  oprof_start_config.h  oprof_start_impl.cpp  oprof_start_main.cpp  oprof_start_util.cpp  oprof_start_util.h  oprofile  persistent_config.h
libabi/: .cvsignore  .gitignore  Makefile.am  Makefile.in  abi.cpp  abi.h  abi_test.cpp  op_abi.c  op_abi.cpp  op_abi.h  op_import.cpp  opimport.cpp
libop/: Makefile.am  Makefile.in  op_alloc_counter.c  op_alloc_counter.h  op_config.c  op_config.h  op_config_24.h  op_config_25.h  op_cpu_type.c  op_cpu_type.h  op_events.c  op_events.h  op_events_desc.c  op_events_desc.h  op_get_interface.c  op_hw_config.h  op_hw_specific.h  op_interface.h  op_interface_25.h  op_mangle.c  op_mangle.h  op_netburst.c  op_netburst.h  op_parse_event.c  op_parse_event.h  op_sample_file.h  op_xml_events.c  op_xml_out.c  op_xml_out.h
libopagent/: .cvsignore  Makefile.am  opagent.c  opagent.h
libpe_utils/: Makefile.am  op_pe_utils.cpp  op_pe_utils.h
libperf_events/: Makefile.am  operf_counter.cpp  operf_counter.h  operf_event.h  operf_kernel.cpp  operf_kernel.h  operf_mangling.cpp  operf_mangling.h  operf_process_info.cpp  operf_process_info.h  operf_sfile.cpp  operf_sfile.h  operf_stats.cpp  operf_stats.h  operf_utils.cpp  operf_utils.h
libpp/: Makefile.am  arrange_profiles.cpp  arrange_profiles.h  callgraph_container.cpp  callgraph_container.h  count_array.cpp  count_array.h  counter_array.cpp  counter_array.h  diff_container.cpp  diff_container.h  filename_spec.cpp  filename_spec.h  format_flags.h  format_output.cpp  format_output.h  image_error.h  image_errors.cpp  image_errors.h  locate_images.cpp  locate_images.h  name_storage.cpp  name_storage.h  op_header.cpp  op_header.h  opp_symbol.h  parse_filename.cpp  parse_filename.h  partition_files.cpp  partition_files.h  populate.cpp  populate.h  populate_for_spu.cpp  profile.cpp  profile.h  profile_container.cpp  profile_container.h  profile_spec.cpp  profile_spec.h  sample_container.cpp  (+13 more)
libregex/: .cvsignore  Makefile.am  demangle_symbol.cpp  mangled-name.txt  op_regex.cpp  op_regex.h  regex_test.cpp  stl.pat  stl.pat.in
libutil++/: Makefile.am  Makefile.in  bfd_spu_support.cpp  bfd_support.cpp  bfd_support.h  cached_value.h  child_reader.cpp  child_reader.h  comma_list.h  cverb.cpp  cverb.h  demangle_symbol.cpp  demangle_symbol.h  file_manip.cpp  file_manip.h  filename_match.cpp  filename_match.h  generic_spec.cpp  generic_spec.h  glob_filter.cpp  glob_filter.h  growable_vector.h  image_flags.h  op_bfd.cpp  op_bfd.h  op_exception.cpp  op_exception.h  op_spu_bfd.cpp  path_filter.cpp  path_filter.h  stream_util.cpp  stream_util.h  string_filter.cpp  string_filter.h  string_manip.cpp  string_manip.h  unique_storage.h  utility.h  verbose_ostream.h  xml_output.cpp  (+1 more)
oprof_report/: .cvsignore  Makefile.am  Makefile.in  hotspot_view.cpp  hotspot_view.h  op_view.h  oprof_report.cpp  oprof_report.h  oprof_report_main.cpp  oprofpp_view.cpp  oprofpp_view.h
pe_counting/: Makefile.am  ocount.cpp  ocount_counter.cpp  ocount_counter.h
pe_profiling/: Makefile.am  operf.cpp  operf.h  operf_counter.cpp  operf_counter.h  operf_event.h  operf_kernel.cpp  operf_kernel.h  operf_mangling.cpp  operf_process_info.cpp  operf_process_info.h  operf_sfile.cpp  operf_sfile.h  operf_utils.cpp
pp/: .cvsignore  .gitignore  Makefile.am  Makefile.in  child_reader.cpp  child_reader.h  common_option.cpp  common_option.h  counter_array.cpp  counter_array.h  counter_profile.cpp  counter_profile.h  counter_util.cpp  counter_util.h  demangle_symbol.cpp  demangle_symbol.h  derive_files.cpp  derive_files.h  format_output.cpp  format_output.h  image_errors.cpp  image_errors.h  op_bfd.cpp  op_bfd.h  op_merge.cpp  op_time.cpp  (+56 more)
(+427 files in other folders)
