#### ATTENTION ####
#    The agents directory must be kept as the last subdir
SUBDIRS = \
	. \
	m4 \
	libutil \
	libop \
	libopagent \
	libdb \
	libutil++ \
	libopt++ \
	libabi \
	utils \
	libregex \
	libpp \
	opjitconv \
	pp \
	events \
	doc \
	libpe_utils \
	libperf_events \
	pe_profiling \
	pe_counting \
	agents
#### ATTENTION ####
#    The agents directory must be kept as the last subdir



ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	ChangeLog-2001 \
	ChangeLog-2002 \
	ChangeLog-2003 \
	ChangeLog-2004 \
	ChangeLog-2005 \
        ChangeLog-2006 \
	ChangeLog-2007 \
	ChangeLog-2008 \
	ChangeLog-2009 \
	ChangeLog-2010 \
	ChangeLog-2011 \
	autogen.sh \
	README_PACKAGERS \
	include/sstream
